# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  differ.py  format_to_json.py  parse.py  plain.py  plane.py  stylish.py  tree.py
gendiff/formaters/: plain.py  stylish.py
gendiff/formats/: format_to_json.py
gendiff/formatters/: format_to_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: expected.txt  expected2.txt  expected3.txt
project/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: expected1.txt  expected2.txt  expected3.json  file1.json  file1.yml  file2.json  file2.yml
