[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["bloodywd <bloodyforreal@gmail.com>"]
readme = "README.md"
packages = [
  { include = "project" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "project.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
