[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A difference generator is a program that determines the difference between two data structures."
authors = ["Evgeny Stepukov <bloodyforreal@gmail.com>"]
repository = "https://github.com/bloodywd/python-project-50"
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: File Formats",
  "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
